###########################################################################
#                              DEPENDENCIES                               #
###########################################################################
find_package(Qt5Widgets 5.10 REQUIRED)
find_package(Qt5Concurrent 5.10 REQUIRED)
find_package(Qt5Multimedia 5.10 REQUIRED)

add_subdirectory(habitrack)
add_subdirectory(panowizard)
